working requests of login and logout

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ openpyxl==2.6.4
 python-wialon==1.2.0
 simplejson==3.17.2
 xlrd==1.2.0
+
+
+the human centipede,
+hard candy,
+a serbian film
+the skin i live in
